--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -17,7 +17,7 @@ jobs:
         java: [ '8', '11', '17' ]
     steps:
       - name: Check Out Repo
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Set up JDK ${{matrix.java}}
         uses: actions/setup-java@v2
