--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -11,19 +11,20 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
         java: [ '8', '11', '17' ]
-
     steps:
+      - name: Check Out Repo
       - uses: actions/checkout@v2
+
       - name: Set up JDK ${{matrix.java}}
         uses: actions/setup-java@v2
         with:
           java-version: ${{matrix.java}}
           distribution: 'adopt'
           cache: maven
+
       - name: Build with Maven Wrapper
         run: ./mvnw -B package
